--- a/src/template.html
+++ b/src/template.html
@@ -15,8 +15,16 @@
             </form>
         </header>
         <main>
-            <div id="weather-container">
+            <div id="weather-container" class="hidden">
+                <div id="current-conditions">
+                    <div>
+                        <p id="location-name">Davao City</p>
+                        <p id="temp">32°C</p>
+                        <p id="conditions">Rain, Partially cloudy</p>
+                    </div>
+                    <p><span id="feelslike">FEELS LIKE: 39.1°C</span> <span id="precipation-prob">PRECIPATION PROBABILITY: 100%</span>WINDSPEED: 11.2 kph<span id="windspeed"></span></p>
 
+                </div>
             </div>
         </main>
         <footer>
