--- a/src/template.html
+++ b/src/template.html
@@ -29,7 +29,7 @@
         </form>
       </header>
       <main>
-        <div id="weather-container" class="hidden">
+        <div id="weather-container">
           <div id="current-conditions">
             <div class="top">
               <h2 id="location-name">Davao City</h2>
@@ -47,38 +47,38 @@
             </div>
 
             <div class="bot">
-              <div id="feelslike">
-                <span>FEELS LIKE</span> <span>39.1°C</span>
+              <div id="feelslike-container">
+                <span>FEELS LIKE</span> <span id="feelslike">39.1°C</span>
               </div>
-              <div id="precipation-prob">
-                <span>RAIN CHANCE</span> <span>100%</span>
+              <div id="precipation-prob-container">
+                <span>RAIN CHANCE</span> <span id="precipprob">100%</span>
               </div>
-              <div id="windspeed">
-                <span>WIND SPEED</span> <span>11.2 kph</span>
+              <div id="windspeed-container">
+                <span>WIND SPEED</span> <span id="windspeed">11.2 kph</span>
               </div>
             </div>
           </div>
 
           <div id="forecast">
-            <div>
+            <div id="div0">
               <img src="#" alt="weather-img" />
               <p class="temp">TEMP</p>
-              <p class="description">Description</p>
+              <p class="conditions">conditions</p>
             </div>
-            <div>
+            <div id="div1">
               <img src="#" alt="weather-img" />
               <p class="temp">TEMP</p>
-              <p class="description">Description</p>
+              <p class="conditions">conditions</p>
             </div>
-            <div>
+            <div id="div2">
               <img src="#" alt="weather-img" />
               <p class="temp">TEMP</p>
-              <p class="description">Description</p>
+              <p class="conditions">conditions</p>
             </div>
-            <div>
+            <div id="div3">
               <img src="#" alt="weather-img" />
               <p class="temp">TEMP</p>
-              <p class="description">Description</p>
+              <p class="conditions">conditions</p>
             </div>
           </div>
         </div>
