--- a/src/template.html
+++ b/src/template.html
@@ -29,59 +29,7 @@
         </form>
       </header>
       <main>
-        <div id="weather-container">
-          <div id="current-conditions">
-            <div class="top">
-              <h2 id="location-name">Davao City</h2>
-              <p id="date">Sunday, 17 Aug</p>
-            </div>
-
-            <div class="mid">
-              <div>
-                <img src="#" alt="weather-img" />
-              </div>
-              <div>
-                <p id="temp">32°C</p>
-                <p id="conditions">Rain, Partially cloudy</p>
-              </div>
-            </div>
-
-            <div class="bot">
-              <div id="feelslike-container">
-                <span>FEELS LIKE</span> <span id="feelslike">39.1°C</span>
-              </div>
-              <div id="precipation-prob-container">
-                <span>RAIN CHANCE</span> <span id="precipprob">100%</span>
-              </div>
-              <div id="windspeed-container">
-                <span>WIND SPEED</span> <span id="windspeed">11.2 kph</span>
-              </div>
-            </div>
-          </div>
-
-          <div id="forecast">
-            <div id="div0">
-              <img src="#" alt="weather-img" />
-              <p class="temp">TEMP</p>
-              <p class="conditions">conditions</p>
-            </div>
-            <div id="div1">
-              <img src="#" alt="weather-img" />
-              <p class="temp">TEMP</p>
-              <p class="conditions">conditions</p>
-            </div>
-            <div id="div2">
-              <img src="#" alt="weather-img" />
-              <p class="temp">TEMP</p>
-              <p class="conditions">conditions</p>
-            </div>
-            <div id="div3">
-              <img src="#" alt="weather-img" />
-              <p class="temp">TEMP</p>
-              <p class="conditions">conditions</p>
-            </div>
-          </div>
-        </div>
+        <div id="weather-container"></div>
       </main>
       <!-- <footer>
         <p>Reshot</p>
