add 'loading' component

--- a/src/template.html
+++ b/src/template.html
@@ -29,11 +29,20 @@
         </form>
       </header>
       <main>
-        <div id="weather-container"></div>
+        <div id="weather-container">
+          <div class="loader hidden"></div>
+        </div>
       </main>
-      <!-- <footer>
-        <p>Reshot</p>
-      </footer> -->
+      <footer
+        style="
+          text-align: center;
+          padding: 15px;
+          font-size: 14px;
+          color: #001f3f;
+        "
+      >
+        © 2025 WeatherApp · Built by Marlon Ilao · Made for The Odin Project
+      </footer>
     </div>
   </body>
 </html>
