--- a/src/template.html
+++ b/src/template.html
@@ -29,9 +29,7 @@
         </form>
       </header>
       <main>
-        <div id="weather-container">
-          <div class="loader hidden"></div>
-        </div>
+        <div id="weather-container"></div>
       </main>
       <footer
         style="
